--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="imgs/products/duck/duck.JPG" alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">High quality duck to keep your feathers organised</p>
                         </div>
                     </div>
 
