--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jurgen Store</title>
+    <title>antek to dekiel Store</title>
 
 
 
